clean up commas

--- a/SQL Advanced/climate_starter.ipynb
+++ b/SQL Advanced/climate_starter.ipynb
@@ -831,7 +831,7 @@
     "#clean it\n",
     "ax.set_xlabel('Date')\n",
     "ax.set_ylabel('Precipitation in inches')\n",
-    "ax.set_title(\"A Years Worth Of Precipitation\")\n",
+    "ax.set_title('A Years Worth Of Precipitation')\n",
     "\n",
     "plt.show()\n",
     "plt.tight_layout()"
