--- a/API Homework/Vacation/VacationPy.ipynb
+++ b/API Homework/Vacation/VacationPy.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +30,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gmaps.configure(api_key=g_key)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -39,11 +48,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "# bring in weather csv\n",
+    "weatherfile = \"cleaned_weather_data.csv\"\n",
+    "we = pd.read_csv(weatherfile)\n",
+    "weather = pd.DataFrame(we).drop(columns=['Unnamed: 0'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-7-335e875faca4>:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  hum_best3['Coordinates'] = hum_best3['Latitude'].astype(str) + \", \" + hum_best3['Longitude'].astype(str)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# filtering vacation params\n",
+    "hum_best = weather[weather['Temperature (Farenheit)'] <= 82]\n",
+    "hum_best2 = hum_best[hum_best['Temperature (Farenheit)'] >= 65]\n",
+    "hum_best3 = hum_best2[hum_best2['Humidity %'] <= 30]\n",
+    "hum_best3['Coordinates'] = hum_best3['Latitude'].astype(str) + \", \" + hum_best3['Longitude'].astype(str)"
    ]
   },
   {
@@ -171,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
