--- a/API Homework/Untitled.ipynb
+++ b/API Homework/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -16,8 +16,8 @@
       "Building wheels for collected packages: citipy\n",
       "  Building wheel for citipy (setup.py): started\n",
       "  Building wheel for citipy (setup.py): finished with status 'done'\n",
-      "  Created wheel for citipy: filename=citipy-0.0.5-py3-none-any.whl size=559707 sha256=3618e8a85b171e54a1d789cf174ae56325ad164ff6ee333a1b7a3b97b858d9d3\n",
-      "  Stored in directory: c:\\users\\christina.lee\\appdata\\local\\pip\\cache\\wheels\\72\\ae\\63\\5d03cf6dfe5c0e9328fb73f8b30da1948a06b9cceaf2c68d2d\n",
+      "  Created wheel for citipy: filename=citipy-0.0.5-py3-none-any.whl size=559707 sha256=3e4fa6e236f27f913b553fb9ea3f133b9b0d92e7a1cf064abbc62aacad7af380\n",
+      "  Stored in directory: c:\\users\\christina\\appdata\\local\\pip\\cache\\wheels\\6d\\df\\5e\\ad8eb9cc5ee7f4ba76865167c09f9a7edff405c669111d8353\n",
       "Successfully built citipy\n",
       "Installing collected packages: kdtree, citipy\n",
       "Successfully installed citipy-0.0.5 kdtree-0.16\n",
@@ -27,6 +27,78 @@
    ],
    "source": [
     "pip install citipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting gmaps\n",
+      "  Downloading gmaps-0.9.0.tar.gz (1.1 MB)\n",
+      "Requirement already satisfied: ipython>=5.3.0 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from gmaps) (7.16.1)\n",
+      "Requirement already satisfied: ipywidgets>=7.0.0 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from gmaps) (7.5.1)\n",
+      "Requirement already satisfied: traitlets>=4.3.0 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from gmaps) (4.3.3)\n",
+      "Collecting geojson>=2.0.0\n",
+      "  Downloading geojson-2.5.0-py2.py3-none-any.whl (14 kB)\n",
+      "Requirement already satisfied: six in c:\\users\\christina\\anaconda3\\lib\\site-packages (from gmaps) (1.15.0)\n",
+      "Requirement already satisfied: decorator in c:\\users\\christina\\anaconda3\\lib\\site-packages (from ipython>=5.3.0->gmaps) (4.4.2)\n",
+      "Requirement already satisfied: setuptools>=18.5 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from ipython>=5.3.0->gmaps) (49.2.0.post20200714)\n",
+      "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from ipython>=5.3.0->gmaps) (3.0.5)\n",
+      "Requirement already satisfied: backcall in c:\\users\\christina\\anaconda3\\lib\\site-packages (from ipython>=5.3.0->gmaps) (0.2.0)\n",
+      "Requirement already satisfied: pickleshare in c:\\users\\christina\\anaconda3\\lib\\site-packages (from ipython>=5.3.0->gmaps) (0.7.5)\n",
+      "Requirement already satisfied: pygments in c:\\users\\christina\\anaconda3\\lib\\site-packages (from ipython>=5.3.0->gmaps) (2.6.1)\n",
+      "Requirement already satisfied: colorama; sys_platform == \"win32\" in c:\\users\\christina\\anaconda3\\lib\\site-packages (from ipython>=5.3.0->gmaps) (0.4.3)\n",
+      "Requirement already satisfied: jedi>=0.10 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from ipython>=5.3.0->gmaps) (0.17.1)\n",
+      "Requirement already satisfied: widgetsnbextension~=3.5.0 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from ipywidgets>=7.0.0->gmaps) (3.5.1)\n",
+      "Requirement already satisfied: ipykernel>=4.5.1 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from ipywidgets>=7.0.0->gmaps) (5.3.2)\n",
+      "Requirement already satisfied: nbformat>=4.2.0 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from ipywidgets>=7.0.0->gmaps) (5.0.7)\n",
+      "Requirement already satisfied: ipython-genutils in c:\\users\\christina\\anaconda3\\lib\\site-packages (from traitlets>=4.3.0->gmaps) (0.2.0)\n",
+      "Requirement already satisfied: wcwidth in c:\\users\\christina\\anaconda3\\lib\\site-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython>=5.3.0->gmaps) (0.2.5)\n",
+      "Requirement already satisfied: parso<0.8.0,>=0.7.0 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from jedi>=0.10->ipython>=5.3.0->gmaps) (0.7.0)\n",
+      "Requirement already satisfied: notebook>=4.4.1 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (6.0.3)\n",
+      "Requirement already satisfied: jupyter-client in c:\\users\\christina\\anaconda3\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets>=7.0.0->gmaps) (6.1.6)\n",
+      "Requirement already satisfied: tornado>=4.2 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets>=7.0.0->gmaps) (6.0.4)\n",
+      "Requirement already satisfied: jupyter-core in c:\\users\\christina\\anaconda3\\lib\\site-packages (from nbformat>=4.2.0->ipywidgets>=7.0.0->gmaps) (4.6.3)\n",
+      "Requirement already satisfied: jsonschema!=2.5.0,>=2.4 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from nbformat>=4.2.0->ipywidgets>=7.0.0->gmaps) (3.2.0)\n",
+      "Requirement already satisfied: prometheus-client in c:\\users\\christina\\anaconda3\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (0.8.0)\n",
+      "Requirement already satisfied: nbconvert in c:\\users\\christina\\anaconda3\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (5.6.1)\n",
+      "Requirement already satisfied: terminado>=0.8.1 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (0.8.3)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (2.11.2)\n",
+      "Requirement already satisfied: Send2Trash in c:\\users\\christina\\anaconda3\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (1.5.0)\n",
+      "Requirement already satisfied: pyzmq>=17 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (19.0.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from jupyter-client->ipykernel>=4.5.1->ipywidgets>=7.0.0->gmaps) (2.8.1)\n",
+      "Requirement already satisfied: pywin32>=1.0; sys_platform == \"win32\" in c:\\users\\christina\\anaconda3\\lib\\site-packages (from jupyter-core->nbformat>=4.2.0->ipywidgets>=7.0.0->gmaps) (227)\n",
+      "Requirement already satisfied: pyrsistent>=0.14.0 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from jsonschema!=2.5.0,>=2.4->nbformat>=4.2.0->ipywidgets>=7.0.0->gmaps) (0.16.0)\n",
+      "Requirement already satisfied: attrs>=17.4.0 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from jsonschema!=2.5.0,>=2.4->nbformat>=4.2.0->ipywidgets>=7.0.0->gmaps) (19.3.0)\n",
+      "Requirement already satisfied: pandocfilters>=1.4.1 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (1.4.2)\n",
+      "Requirement already satisfied: mistune<2,>=0.8.1 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (0.8.4)\n",
+      "Requirement already satisfied: entrypoints>=0.2.2 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (0.3)\n",
+      "Requirement already satisfied: testpath in c:\\users\\christina\\anaconda3\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (0.4.4)\n",
+      "Requirement already satisfied: defusedxml in c:\\users\\christina\\anaconda3\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (0.6.0)\n",
+      "Requirement already satisfied: bleach in c:\\users\\christina\\anaconda3\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (3.1.5)\n",
+      "Requirement already satisfied: MarkupSafe>=0.23 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from jinja2->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (1.1.1)\n",
+      "Requirement already satisfied: webencodings in c:\\users\\christina\\anaconda3\\lib\\site-packages (from bleach->nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (0.5.1)\n",
+      "Requirement already satisfied: packaging in c:\\users\\christina\\anaconda3\\lib\\site-packages (from bleach->nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (20.4)\n",
+      "Requirement already satisfied: pyparsing>=2.0.2 in c:\\users\\christina\\anaconda3\\lib\\site-packages (from packaging->bleach->nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (2.4.7)\n",
+      "Building wheels for collected packages: gmaps\n",
+      "  Building wheel for gmaps (setup.py): started\n",
+      "  Building wheel for gmaps (setup.py): finished with status 'done'\n",
+      "  Created wheel for gmaps: filename=gmaps-0.9.0-py2.py3-none-any.whl size=2076101 sha256=82384e6b64bbcb5673467ed63604ad419e71b6fbb682d5344542d2e832f1b9b2\n",
+      "  Stored in directory: c:\\users\\christina\\appdata\\local\\pip\\cache\\wheels\\30\\bd\\87\\d0d731ee712c34a4d6bace8b1dbf8c8932e22a1625b4a55be4\n",
+      "Successfully built gmaps\n",
+      "Installing collected packages: geojson, gmaps\n",
+      "Successfully installed geojson-2.5.0 gmaps-0.9.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install gmaps"
    ]
   },
   {
@@ -53,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
